--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<span class="date"></span>
 									<h2><a href="#">Background<br />
 									</a></h2>
-									<p>My name is Zachary Waugh, I am 22 years old and have an interest in becoming a Data Analyst. I graduated in May 2021 with a Bachelor's of Science in Mathematics, also I have a background in Computer Science,Economics & Business. The skills that I possess, consists of: SQL, Tableau, Python, Excel/Google Sheets and Mathematics such as Calculus 1-3, Linear Algebra, Abstract Algebra, Real Analysis, Differential Equations, Number Theory, Game Theory, Trigonometry,Mathematical Modeling and Discrete Mathematics.</p>
+									<p>My name is Zachary Waugh, I am 25 year old Data Analyst. I graduated in May 2021 with a Bachelor's of Science in Mathematics, also I have a background in Computer Science, Economics & Business. The skills that I possess, consists of: SQL, Tableau, Python, Excel/Google Sheets and Mathematics such as Calculus 1-3, Linear Algebra, Abstract Algebra, Real Analysis, Differential Equations, Number Theory, Game Theory, Trigonometry,Mathematical Modeling and Discrete Mathematics.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/3.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -492,7 +492,7 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(434) 333-5205</a></p>
+								<p><a href="#">(434) 942-4220</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
