--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Zachary Waugh's Portfolio<br />
 						</h1>
-						<p>Data Analyst skilled in SQL, Tableau, Python and Excel/Google Sheets <a href="https://www.linkedin.com/in/zachary-waugh-5b539a1ba/">@Zachary Waugh</a>.</p>
+						<p>SQL | Python | Tableau | Power BI | Snowflake | Excel | AI Tools<a href="https://www.linkedin.com/in/zachary-waugh-5b539a1ba/">@Zachary Waugh</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -53,7 +53,14 @@
 									<span class="date"></span>
 									<h2><a href="#">Background<br />
 									</a></h2>
-									<p>My name is Zachary Waugh, I am a 25 year old Data Analyst. I graduated in May 2021 with a Bachelor's of Science in Mathematics, also I have a background in Computer Science, Economics & Business. The skills that I possess, consists of: SQL, Tableau, Python, Excel/Google Sheets and Mathematics such as Calculus 1-3, Linear Algebra, Abstract Algebra, Real Analysis, Differential Equations, Number Theory, Game Theory, Trigonometry,Mathematical Modeling and Discrete Mathematics.</p>
+									<p>With over 2 years of experience in turning complex data into actionable insights, I bring a strong foundation in Mathematics, alongside expertise in SQL, Python, Tableau, Power BI, and Snowflake. My work is driven by a passion for solving business challenges, automating processes, and delivering data-driven strategies that support strategic decision-making.
+
+I specialize in data preparation, ETL processes, and the creation of dynamic dashboards to empower teams and streamline operations. Throughout my career, I’ve consistently enhanced data workflows, resulting in improved reporting efficiency and stronger alignment between business objectives and data insights.
+
+In my previous role, I was responsible for building automated reporting systems, streamlining data pipelines, and creating customized dashboards that empowered stakeholders to make informed decisions faster. My ability to communicate complex data findings clearly and collaborate effectively with cross-functional teams made me a key player in driving data-driven initiatives.
+
+I am now seeking new opportunities where I can leverage my technical and business expertise to help organizations unlock the full potential of their data.
+</p>
 								</header>
 								<a href="#" class="image main"><img src="images/3.jpg" alt="" /></a>
 								<ul class="actions special">
