--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ I am now seeking new opportunities where I can leverage my technical and busines
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://my.indeed.com/resume?hl=en&co=US&from=gnav-messaging--messaging-webapp"><span class="label">Indeed</span></a></li>
-									<li><a href="https://www.linkedin.com/in/zachary-waugh-5b539a1ba/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/zachary-waugh-5b539a1ba/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/Zaqhry" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
