--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Zachary Waugh's Portfolio<br />
+						<h1>Zachary Waugh | Data Analyst<br />
 						</h1>
 						<p>SQL | Python | Tableau | Power BI | Snowflake | Excel | AI Tools<a href="https://www.linkedin.com/in/zachary-waugh-5b539a1ba/">@Zachary Waugh</a>.</p>
 						<ul class="actions">
