--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Zachary Waugh | Data Analyst<br />
 						</h1>
-						<p>SQL | Python | Tableau | Power BI | Snowflake | Excel | AI Tools&nbsp;<a href="https://www.linkedin.com/in/zachary-waugh-5b539a1ba/">@Zachary Waugh</a></p>
+						<p>SQL | Python | Excel | Tableau | Power BI | Snowflake | AWS | AI Tools</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
