--- a/index.html
+++ b/index.html
@@ -460,8 +460,6 @@
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
 									<a href="#" class="page active">1</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="next">Next</a>
 								</div>
 							</footer>
 
@@ -487,7 +485,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://my.indeed.com/resume?hl=en&co=US&from=gnav-messaging--messaging-webapp"><span class="label">Indeed</span></a></li>
-									<li><a href="https://www.linkedin.com/in/zachary-waugh-5b539a1ba/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/zacharylwaugh/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/Zaqhry" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
