--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Zachary Waugh | Data Analyst<br />
+						<h1>Zachary Waugh | Data Analyst<br>
 						</h1>
 						<p>SQL | Python | Excel | Tableau | Power BI | Snowflake | AWS | AI Tools</p>
 						<ul class="actions">
