--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Zachary Waugh | Data Analyst<br>
+						<h1>Zachary Waugh | Data Analyst<br />
 						</h1>
 						<p>SQL | Python | Excel | Tableau | Power BI | Snowflake | AWS | AI Tools</p>
 						<ul class="actions">
@@ -434,7 +434,8 @@
 		<li><a href="https://github.com/Zaqhry/Storytelling-Data-Visualization-on-Exchange-Rates-Project/blob/main/Storytelling%20Data%20Visualization%20on%20Exchange%20Rates.ipynb" class="button">View</a></li>
 	</ul>
 </article>
-			</div>
+					</div>
+
 				<!-- Footer -->
 					<footer id="footer">
 						<section class="split contact">
