--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<head>
+		<title>Massively by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -434,6 +441,8 @@
 		<li><a href="https://github.com/Zaqhry/Storytelling-Data-Visualization-on-Exchange-Rates-Project/blob/main/Storytelling%20Data%20Visualization%20on%20Exchange%20Rates.ipynb" class="button">View</a></li>
 	</ul>
 </article>
+							</section>
+
 					</div>
 
 				<!-- Footer -->
