--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<head>
+		<title>Massively by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -435,9 +442,6 @@
 	</ul>
 </article>
 							</section>
-
-						<!-- Footer -->
-							
 					</div>
 
 				<!-- Footer -->
@@ -488,8 +492,6 @@
 						</section>
 					</footer>
 			</div>
-
-		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
