--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE HTML>
+<!--
+	Massively by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<title>Massively by HTML5 UP</title>
@@ -436,7 +441,30 @@
 		<li><a href="https://github.com/Zaqhry/Storytelling-Data-Visualization-on-Exchange-Rates-Project/blob/main/Storytelling%20Data%20Visualization%20on%20Exchange%20Rates.ipynb" class="button">View</a></li>
 	</ul>
 </article>
+
+
+
+
+
+
+
+
+
+
+
+
 							</section>
+
+						<!-- Footer -->
+							<footer>
+								<div class="pagination">
+									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="#" class="page active">1</a>
+									<span class="extra">&hellip;</span>
+									<a href="#" class="next">Next</a>
+								</div>
+							</footer>
+
 					</div>
 
 				<!-- Footer -->
@@ -486,7 +514,15 @@
 							</section>
 						</section>
 					</footer>
+
+				<!-- Copyright -->
+					<div id="copyright">
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					</div>
+
 			</div>
+
+		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
